# Flam-Project

./: README.md
android/: build.gradle.kts  gradle.properties  local.properties  settings.gradle
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/java/com/example/cameraapp/: MainActivity.kt  MyGLRenderer.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
web/: copy_frames.bat  index.html  main.js  main.ts  package-lock.json  package.json  server.js  style.css  tsconfig.json
